add lorem cheese

--- a/fm_blog_card/index.html
+++ b/fm_blog_card/index.html
@@ -22,10 +22,10 @@ Learning
 </div>  
   Published 21 Dec 2023
 
-  HTML & CSS foundations
+  Squirty cheese airedale fondue
 
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
+  Monterey jack cauliflower cheese ricotta pepper jack macaroni cheese cut the cheese manchego say cheese. 
+  
   Some guy  
 </div> 
   <div class="attribution">
