--- a/fm_blog_card/index.html
+++ b/fm_blog_card/index.html
@@ -18,15 +18,20 @@
 <body>
 <div class="main-box">
 <div class="tag">
-Learning
+<p id="learn">Learning</p>
 </div>  
-  Published 21 Dec 2023
-
-  Squirty cheese airedale fondue
-
-  Monterey jack cauliflower cheese ricotta pepper jack macaroni cheese cut the cheese manchego say cheese. 
-  
-  Some guy  
+<div class="date">
+  <p>Published 21 Dec 2023</p>
+</div>
+<div class="title">  
+  <h2>Squirty cheese airedale fondue</h2>
+</div>
+<div class="paragraph">
+  <p>Monterey jack cauliflower cheese ricotta pepper jack macaroni cheese cut the cheese manchego say cheese.</p> 
+</div>
+<div class="caption">  
+  <p>Some guy<p>
+</div> 
 </div> 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
