add img and other styling

--- a/fm_blog_card/index.html
+++ b/fm_blog_card/index.html
@@ -1,41 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="stylesheet" href="styles.css">
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="styles.css" />
 
-  <title>Frontend Mentor | Blog preview card</title>
+    <title>Frontend Mentor | Blog preview card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-<div class="main-box">
-<div class="tag">
-<p id="learn">Learning</p>
-</div>  
-<div class="date">
-  <p>Published 21 Dec 2023</p>
-</div>
-<div class="title">  
-  <h2>Squirty cheese airedale fondue</h2>
-</div>
-<div class="paragraph">
-  <p>Monterey jack cauliflower cheese ricotta pepper jack macaroni cheese cut the cheese manchego say cheese.</p> 
-</div>
-<div class="caption">  
-  <p>Some guy<p>
-</div> 
-</div> 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Matthew Campbell</a>.
-  </div>
-</body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+      @font-face {
+        src: url(Figtree-VariableFont_wght.ttf)
+      }
+    </style>
+  </head>
+  <body>
+    <div class="main-box">
+      <img src="assets/images/illustration-article.svg" alt="logo" class="img-logo">
+      <div class="tag">
+        <p id="learn">Learning</p>
+      </div>
+      <div class="date">
+        <p>Published 21 Dec 2023</p>
+      </div>
+      <div class="title">
+        <h2>Squirty cheese airedale fondue</h2>
+      </div>
+      <div class="paragraph">
+        <p>
+          Monterey jack cauliflower cheese ricotta pepper jack macaroni cheese
+          cut the cheese manchego say cheese.
+        </p>
+      </div>
+      <div class="image-caption-container">
+      <span class="img-guy">
+        <img src="assets/images/image-avatar.webp" alt="Some guy">
+      </span>
+      <span class="caption">
+        <p>Some guy</p>
+      </span>
+       </div>
+    </div>
+    <div class="attribution">
+      <footer>
+        <p>
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Matthew Campbell</a>.
+        </p>
+      </footer>
+    </div>
+  </body>
 </html>
